--- a/local_preprocessing/preprocessing.ipynb
+++ b/local_preprocessing/preprocessing.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
      "output_type": "stream",
      "text": [
       "Split video /Users/vidyaakavoor/Documents/school/CS640/Project/cs640-project-fall2020/local_preprocessing/example_clips/klobuchar_2_0.mp4\n",
-      "Split video /Users/vidyaakavoor/Documents/school/CS640/Project/cs640-project-fall2020/local_preprocessing/example_clips/buttigieg_1_2.mp4\n",
+      "Split video /Users/vidyaakavoor/Documents/school/CS640/Project/cs640-project-fall2020/local_preprocessing/example_clips/yang_847_1.mp4\n",
       "Split video /Users/vidyaakavoor/Documents/school/CS640/Project/cs640-project-fall2020/local_preprocessing/example_clips/warren_11_6.mp4\n",
       "Split video /Users/vidyaakavoor/Documents/school/CS640/Project/cs640-project-fall2020/local_preprocessing/example_clips/sanders_3_0.mp4\n",
       "Split video /Users/vidyaakavoor/Documents/school/CS640/Project/cs640-project-fall2020/local_preprocessing/example_clips/yang_2_3.mp4\n",
@@ -111,7 +111,9 @@
     "                \n",
     "                new_frame = preprocess_frame(image)\n",
     "                if (type(new_frame) == np.ndarray):\n",
-    "                    cv2.imwrite(frame_file, new_frame)     # save frame as JPEG file      \n",
+    "                    cv2.imwrite(frame_file, new_frame)     # save frame as JPEG file\n",
+    "                else:\n",
+    "                    break # once you stop detecting one face, don't take more frames\n",
     "                success,image = vidcap.read()\n",
     "                count += 1\n",
     "            print('Split video', video)\n",
